--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1",
+    "vercel": "^23.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
